# osu-sig

./: README.md
osusig-backend/: Cargo.toml  README.md
osusig-backend/src/: main.rs  sig_image_generator.rs  sig_models.rs
osusig-frontend/: README.md  index.ejs  package-lock.json  package.json
osusig-frontend/aurelia_project/: aurelia.json
osusig-frontend/src/: app.html  app.ts
