[package]
name = "osusig-backend"
version = "0.1.0"
authors = ["Lost Illusion <im@lostillusion.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
imageproc = "0.21.0"
image = "0.23.11"
rosu = "0.3.3"
warp = "0.2.5"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
colors-transform = "0.2.11"
rusttype = "0.9.2"
reqwest = "0.10.8"